--- a/usr/src/pkgdefs/SUNWatge/postinstall.tmpl
+++ b/usr/src/pkgdefs/SUNWatge/postinstall.tmpl
@@ -25,4 +25,4 @@
 
 include drv_utils
 
-pkg_drvadd -i '"pciex1969,1026" "pciex1969,1048"' atge || exit 1
+pkg_drvadd -i '"pciex1969,1026" "pciex1969,1048" "pciex1969,2048"' atge || exit 1
