Import ncp3-gate f9979ba6cdfa re #3946 rb413 - added support for chipset 2322    qlc-2322-support.patch

--- a/usr/src/pkgdefs/SUNWqlc/postinstall.tmpl
+++ b/usr/src/pkgdefs/SUNWqlc/postinstall.tmpl
@@ -45,6 +45,7 @@ elif [ ${ARCH} = "i386" ]; then
 	    "pci1077,2300"
 	    "pci1077,2312"
 	    "pci1077,132"
+	    "pci1077,117"
 	    "pci1077,2422"
 	    "pciex1077,2432"
 	    "pciex1077,2532"
